Fix button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: "Lato", sans-serif;
+  font-family: Lato, sans-serif;
   line-height: 1.5;
 }
 
@@ -11,6 +11,11 @@ html {
 section {
   padding: 2em 0;
   text-align: center;
+  vertical-align: middle;
+}
+
+.section-body {
+  text-align: left;
 }
 
 body {
@@ -40,18 +45,14 @@ p {
   text-align: left;
 }
 
-a {
+.btn {
   display: inline-block;
   padding: .4em .75em .5em;
   border-style: solid;
   border-radius: 10px;
   text-align: left;
-}
-
-.btn {
   color: #333;
   border-color: #333;
-  border-radius: 10px;
 }
 
 .btn:hover {
